# hssi-somef

./: README.md  pyproject.toml
src/somef/: header_analysis.py  somef_cli.py
src/somef/parser/: python_parser.py
