[tool.poetry]
name = "somef"
version = "0.9.11"
description = "SOftware Metadata Extraction Framework: A tool for automatically extracting relevant software information from readme files."
authors = ["Daniel Garijo <daniel.garijo@upm.es>"]
packages = [
    { include = "somef", from = "src" }
]
classifiers = [ 
    "Programming Language :: Python :: 3.10", 
    "Operating System :: OS Independent", 
    "License :: OSI Approved :: MIT License", 
    "Topic :: Software Development :: Libraries :: Python Modules"
    ]
readme = "README.md"

# This build system is required so that falcon 3.1.1 is used as a subdependency 
# of morph-kgc, otherwise building morph-kgc will fail
[build-system]
requires = ["poetry-core>=1.1.10"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13.0"
bs4 = "^0.0.1"
click = "^8.1.7"
click-option-group = "^0.5.6"
matplotlib = "^3.8.2"
nltk = "^3.9.0"
numpy = "^2.3.0"
pandas = "^2.1.4"
rdflib = "^7.0.0"
textblob = "^0.17.1"
validators = "^0.22.0"
xgboost = "^2.0.3"
scipy = "^1.11.4"
inflect = "^7.0.0"
contractions = "^0.1.73"
chardet = "^5.2.0"
imbalanced-learn = "^0.11.0"
pytest = "^7.4.4"
falcon = "^4.0.0"
morph-kgc = "^2.8.1"
bibtexparser = "^1.4.1"
nbformat = "^5.9.2"
markdown = "^3.5.2"
rdflib-jsonld = "^0.6.2"
requests = "^2.31.0"
scikit-learn = "^1.4.2"
pyyaml = "^6.0.2"
lxml = "^5.1.0"

[tool.poetry.scripts]
somef = "somef.__main__:cli"

[tool.poetry.urls]
homepage = "https://github.com/KnowledgeCaptureAndDiscovery/somef"
